fix: dark mode toggler

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -288,7 +288,7 @@ button,
   .h1 {
     font-size: 18px;
     line-height: 1.2;
-    margin:auto
+    margin: auto
   }
 
   h2,
@@ -298,7 +298,8 @@ button,
     margin: 0;
   }
 
-  h3, .h3 {
+  h3,
+  .h3 {
     font-size: 18px;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.2;
